[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/img/blk_bg.png" type="Texture" id=1]
[ext_resource path="res://assets/img/main_menu.png" type="Texture" id=2]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=3]
[ext_resource path="res://scenes/Transitioner.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/img/btn_new_game_inactive.png" type="Texture" id=5]
[ext_resource path="res://assets/img/btn_options_inactive.png" type="Texture" id=8]
[ext_resource path="res://assets/img/btn_quit_inactive.png" type="Texture" id=12]

[node name="Menu" type="Node2D"]
script = ExtResource( 3 )

[node name="Transitioner" parent="." instance=ExtResource( 4 )]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Template" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="NewGame" type="TextureButton" parent="."]
margin_left = 30.6159
margin_top = 269.269
margin_right = 136.616
margin_bottom = 288.269
focus_neighbour_top = NodePath("../Quit")
focus_neighbour_bottom = NodePath("../Options")
focus_next = NodePath("../Options")
focus_previous = NodePath("../Quit")
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Options" type="TextureButton" parent="."]
margin_left = 31.0569
margin_top = 290.784
margin_right = 137.057
margin_bottom = 309.784
focus_neighbour_top = NodePath("../NewGame")
focus_neighbour_bottom = NodePath("../Quit")
focus_next = NodePath("../Quit")
focus_previous = NodePath("../NewGame")
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Quit" type="TextureButton" parent="."]
margin_left = 31.4859
margin_top = 312.945
margin_right = 137.486
margin_bottom = 331.945
focus_neighbour_top = NodePath("../Options")
focus_neighbour_bottom = NodePath("../NewGame")
focus_next = NodePath("../NewGame")
focus_previous = NodePath("../Options")
texture_normal = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="button_down" from="NewGame" to="." method="_on_NewGame_button_down"]
[connection signal="button_up" from="NewGame" to="." method="_on_NewGame_button_up"]
[connection signal="focus_entered" from="NewGame" to="." method="_on_NewGame_focus_entered"]
[connection signal="focus_exited" from="NewGame" to="." method="_on_NewGame_focus_exited"]
[connection signal="mouse_entered" from="NewGame" to="." method="_on_NewGame_mouse_entered"]
[connection signal="pressed" from="NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="button_down" from="Options" to="." method="_on_Options_button_down"]
[connection signal="button_up" from="Options" to="." method="_on_Options_button_up"]
[connection signal="focus_entered" from="Options" to="." method="_on_Options_focus_entered"]
[connection signal="focus_exited" from="Options" to="." method="_on_Options_focus_exited"]
[connection signal="mouse_entered" from="Options" to="." method="_on_Options_mouse_entered"]
[connection signal="pressed" from="Options" to="." method="_on_Options_pressed"]
[connection signal="button_down" from="Quit" to="." method="_on_Quit_button_down"]
[connection signal="button_up" from="Quit" to="." method="_on_Quit_button_up"]
[connection signal="focus_entered" from="Quit" to="." method="_on_Quit_focus_entered"]
[connection signal="focus_exited" from="Quit" to="." method="_on_Quit_focus_exited"]
[connection signal="mouse_entered" from="Quit" to="." method="_on_Quit_mouse_entered"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
